--- a/Views/Anime/Edit.cshtml
+++ b/Views/Anime/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model AnimeStreamerV2.Models.AnimeModel
 @using AnimeStreamerV2.Models
+@using test.Models
 @{
     ViewData["Title"] = "Edit Anime";
 }
