--- a/Views/Anime/Details.cshtml
+++ b/Views/Anime/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@model AnimeStreamerV2.Models.AnimeModel
 @using Microsoft.AspNetCore.Identity
+@using test.Models
 @using test.Models.AdminSystem
 @inject UserManager<ApplicationUser> UserManager
 
