--- a/Views/Anime/Edit.cshtml
+++ b/Views/Anime/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model AnimePlayerV2.Models.AnimeEditViewModel
+﻿@using test.Models
+@model AnimePlayerV2.Models.AnimeEditViewModel
 @{
     ViewData["Title"] = "Edit Anime";
 }
